--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tailwindplus/elements": "^1.0.13",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.2"
+    "react-router-dom": "^7.9.2",
+    "react-tailwindcss-datepicker": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
