--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@tailwindplus/elements": "^1.0.13",
+    "date-fns": "^4.1.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
